--- a/templates/index.html
+++ b/templates/index.html
@@ -52,6 +52,6 @@ Edufunds
 </div>
 </body>
 
-<footer> This app was made by Michael Clark. View it on Github</footer>
+<footer> This app was made by Michael Clark. View it on <a href="https://github.com/Razberrymc/edufundapp">Github</a></footer>
 
 {% endblock %}
