--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Raleway&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="static/bootstrap_css/bootstrap.min.css">
   <link rel="stylesheet" href="static/main.css">
+
+<title>Edufund App</title>
+
 </head>
 
 {% extends 'bootstrap/base.html' %}
@@ -50,8 +53,9 @@ Edufunds
     </div>
   </div>
 </div>
-</body>
 
 <footer> This app was made by Michael Clark. View it on <a href="https://github.com/Razberrymc/edufundapp">Github</a></footer>
+
+</body>
 
 {% endblock %}
