--- a/templates/statefund.html
+++ b/templates/statefund.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="static/main.css">
 	<link rel="stylesheet" href="static/main.css">
 
+<title> State and School Info </title>
+
 </head>
 {% extends 'bootstrap/base.html' %}
 
