--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Raleway&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="static/bootstrap_css/bootstrap.min.css">
   <link rel="stylesheet" href="static/main.css">
+	<link rel="stylesheet" href="static/main.css">
 
 <title>Edufund App</title>
 
